# vestirust

./: .gitignore  Cargo.toml  README.md  vestibule.json  vestibule.yaml
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: explorer.dart  main.dart  webview.dart
frontend/web/: index.html
src/: apps.rs  configuration.rs  davs.rs  lib.rs  main.rs  middlewares.rs  mocks.rs  server.rs  users.rs  utils.rs
src/apps/: apps_model.rs  mod.rs
src/davs/: encrypted_streamer.rs  mod.rs  model.rs  webdav_server.rs
tests/backend/: admin.rs  apps.rs  davs.rs  helpers.rs  main.rs  user.rs
