[package]
name = "vestibule"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vestibule"

[dependencies]
serde_json = "1.0"
serde_derive ="1.0"
serde = "1.0"
anyhow = "1.0"
axum = "0.5"
hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy", branch = "master" }
lazy_static = "1.4.0"
tower = "0.4"
rand= "0.8"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }