[package]
name = "vestibule"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vestibule"

[dependencies]
anyhow = "1.0"
async_zip = "0.0.7"
async-stream = "0.3"
async-walkdir = "0.2"
axum = "0.5"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
chrono = "0.4"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = ["client"] }
hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy", branch = "master" }
lazy_static = "1.4.0"
log = "0.4"
mime_guess = "2.0"
percent-encoding = "2.1"
rand= "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
tokio = { version = "1.18", features = ["full"] }
tokio-util = { version = "0.7",  features = ["io-util"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
uuid = { version = "1.1", features = ["v4", "fast-rng"] }
xml-rs = "0.8"


[dev-dependencies]
base64ct = { version = "1.5", features = ["alloc"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies", "stream"] }
sha2 = "0.10"